<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".RegisterPage">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="1000dp"
        android:layout_height="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/fondo"
        tools:ignore="ContentDescription,ImageContrastCheck,MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteY="-72dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="227dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/logo_1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="REGISTER"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSing_In"
            android:layout_width="306dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/oscuro"


            android:gravity="center"
            android:text="@string/sing_up"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ya tengo cuenta "
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/sing_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/sing_uo2"
                android:textColor="@color/blue"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="KeyboardInaccessibleWidget,TextSizeCheck,TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>